feat #5 : currency 리스트, getChange 메소드 추가
- 인덱스로 화폐 금액 치환하는 currency 리스트 추가
- getChange메소드에서 그리디 알고리즘으로 화폐 변환 후 결과 리스트 반환